# ksaai_scalabilty

./: .gitignore  00_setup_and_download.py  01_synthetic_benchmarks.py  02_real_domain_benchmarks.py  03_memory_and_parallelisation.py  04_compile_results.py  CITATION.bib  LICENSE  README.md  config.yaml  environment.yml  environment_mic.yml  pyproject.toml  requirements.txt  run_all.py
.github/workflows/: ci.yml
results/: complexity_exponents.csv  crossover_analysis.csv  p_scaling_timing.csv  synthetic_timing.csv
src/ngorima2025/: __init__.py  mic_worker.py  scorers.py  utils.py
tests/: conftest.py  test_accuracy_and_cv.py  test_pipeline.py
