[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ngorima2025"
version = "1.0.0"
description = "Computational Complexity of Correlation-Based Feature Selection: A Multi-Domain Scalability Analysis of ξₙ, DC, MI, and MIC"
authors = [
    { name = "Tinashe Ngorima", email = "tngorima@su.edu.om" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = [
    "feature selection", "computational complexity", "Chatterjee correlation",
    "distance correlation", "mutual information", "genomics", "machine learning"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.25",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "pandas>=2.0",
    "matplotlib>=3.8",
    "joblib>=1.3",
    "psutil>=5.9",
    "tqdm>=4.66",
]

[project.optional-dependencies]
full = [
    "xicor>=0.4.0",
    "dcor>=0.6.0",
    "minepy>=1.2.6",
    "memory-profiler>=0.61",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "black>=23.0",
    "ruff>=0.1",
]

[project.urls]
Repository   = "https://github.com/TinasheNgorima/ksaai_scalabilty"
"Bug Tracker" = "https://github.com/TinasheNgorima/ksaai_scalabilty/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"ngorima2025" = ["*.py"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"
markers   = [
    "slow: marks tests as slow (deselect with '-m not slow')",
    "integration: marks tests requiring full dataset",
]
